fixed z-index and transparency

--- a/webapp/css/app.css
+++ b/webapp/css/app.css
@@ -32,7 +32,7 @@ a:VISITED {
 
 #myheader {
 	position: fixed;
-	z-index: 50;
+	z-index: 100;
 	top: 0;
 	left: 0;
 	width: 100%;
@@ -81,7 +81,7 @@ a:VISITED {
 
 #loading {
 	display: none;
-	z-index: 100;
+	z-index: 1000;
 	width: 100px;
 	height: 100px;
 	position: fixed;
@@ -99,7 +99,7 @@ a:VISITED {
 
 #global-error-message {
 	display: none;
-	z-index: 90;
+	z-index: 990;
 	width: 400px;
 	height: auto;
 	position: fixed;
@@ -394,14 +394,14 @@ td.task-column>.new-task-button {
  */
 .new-task {
 	display: none;
-	z-index: 40;
+	z-index: 400;
 	position: absolute;
 	right: 40px;
 	padding: 10px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	border: solid 1px #888;
-	background: rgba(255, 255, 255, 0.9);
+	background: rgba(255, 255, 255, 1.0);
 	box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -428,12 +428,12 @@ td.task-column>.new-task-button {
 .update-task {
 	display: none;
 	position: absolute;
-	z-index: 40;
+	z-index: 400;
 	padding: 10px;
 	border-radius: 5px;
 	-moz-border-radius: 5px;
 	border: solid 1px #888;
-	background: rgba(255, 255, 255, 0.9);
+	background: rgba(255, 255, 255, 1.0);
 	box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.3);
 }
 
@@ -464,5 +464,6 @@ td.task-column>.new-task-button {
 	left: 0;
 	width: 100%;
 	height: 100%;
-	z-index: 500;
+	z-index: 300;
+	background: rgba(0, 0, 0, 0.2);
 }
